# rknn

./: README.md
lubancat_ai_manual_code/: 补充说明.txt
lubancat_ai_manual_code/base/: README.md
lubancat_ai_manual_code/base/bert/: bert_test1.py  onnx2rknn.py  rknn_Inference.py  tokenization.py
lubancat_ai_manual_code/base/detr/: dert_test.py  onnx2rknn.py  rknn_Inference.py
lubancat_ai_manual_code/base/handwritten/: handwritten.ipynb  onnx_to_rknn.py  rknn_eval.py
lubancat_ai_manual_code/base/handwritten/c++/: CMakeLists.txt  main.cc
lubancat_ai_manual_code/base/handwritten/model/: handwritten.onnx
lubancat_ai_manual_code/base/handwritten/python/: rknn_inference.py
lubancat_ai_manual_code/base/housing/: housing.ipynb  housing.py
lubancat_ai_manual_code/base/mobilenetv2/: dataset.txt  export.py  model.py  pt2rknn.py  test.py  train.py
lubancat_ai_manual_code/base/resnet18/: cifar10_to_jpg.py  resnet18.py  rknn_transfer.py  rknnlite_inference0.py  rknnlite_inference1.py
lubancat_ai_manual_code/base/vit/: onnx2rknn.py  rknn_Inference.py  vit_export_onnx.py  vit_test_image.py
lubancat_ai_manual_code/base/vit/model/: dateset.txt
lubancat_ai_manual_code/base/yolov3/: yolov3_inference.py  yolov3_to_rknn.py
lubancat_ai_manual_code/dev_env/rknn_toolkit2/doc/: requirements_cp38-1.5.0.txt
lubancat_ai_manual_code/dev_env/rknn_toolkit2/examples/conversion/yolov5/: test.py
lubancat_ai_manual_code/dev_env/rknn_toolkit2/examples/evaluation/yolov5/: test.py
lubancat_ai_manual_code/dev_env/rknn_toolkit_lite2/docs/: change_log.txt
lubancat_ai_manual_code/dev_env/rknn_toolkit_lite2/examples/yolov5_inference/: test.py
lubancat_ai_manual_code/dev_env/rknpu2/rknn_yolov5_demo/: CMakeLists.txt  build-linux_RK3562.sh  build-linux_RK3588.sh
lubancat_ai_manual_code/dev_env/rknpu2/rknn_yolov5_demo/src/: main.cc
lubancat_ai_manual_code/example/yolo11/cpp/: CMakeLists.txt  build-linux.sh  yolo11_videocapture_demo.cc
lubancat_ai_manual_code/example/yolo11/cpp/rknpu2/: yolo11.cc
lubancat_ai_manual_code/example/yolo11/python/: convert.py
lubancat_ai_manual_code/example/yolov5/: onnx2rknn.py  pt2rknn.py  test.py
lubancat_ai_manual_code/example/yolov5/cpp/: CMakeLists.txt  build-linux.sh  postprocess.h  yolov5.h  yolov5_image_demo.cc  yolov5_videocapture_demo.cc
lubancat_ai_manual_code/example/yolov5/cpp/rknpu2/: yolov5.cc
lubancat_ai_manual_code/example/yolov8/yolov8_det/: pt2rknn.py  test.py
lubancat_ai_manual_code/example/yolov8/yolov8_det/cpp/: CMakeLists.txt
lubancat_ai_manual_code/example/yolov8/yolov8_det/cpp/include/: postprocess.h  yolov8.h
lubancat_ai_manual_code/example/yolov8/yolov8_det/cpp/src/: image_utils.c  main.cc  yolov8.cc  yolov8_videocapture_demo.cc
lubancat_ai_manual_code/example/yolov8/yolov8_pose/: onnx2rknn.py
lubancat_ai_manual_code/example/yolov8/yolov8_pose/cpp/: CMakeLists.txt  build-linux.sh
lubancat_ai_manual_code/example/yolov8/yolov8_pose/cpp/inc/: postprocess.h  yolov8_pose.h
lubancat_ai_manual_code/example/yolov8/yolov8_pose/cpp/src/: postprocess.cc  yolov8_pose.cc  yolov8_pose_image.cc  yolov8_pose_videocapture_demo.cc
lubancat_ai_manual_code/example/yolov8/yolov8_seg/: onnx2rknn.py  test.py
lubancat_ai_manual_code/example/yolov8/yolov8_seg/cpp/: CMakeLists.txt  build-linux.sh  easy_timer.h  image_utils.c  image_utils.h  main.cc  postprocess.h  yolov8_seg.h  yolov8seg_videocapture_demo.cc
lubancat_ai_manual_code/example/yolov8/yolov8_seg/cpp/rknpu2/: yolov8_seg.cc
rknn_yolo/: scaling_frequency.sh
